# motion_primitives

./: .gitignore  CMakeLists.txt
matlab/bathymetrie/: pnpoly.m  polyintersec  run.m
matlab/bathymetrie/bathym_data/: EPSG_4326-650-6000-50.txt  EPSG_4326-700-5950-50.txt  EPSG_4326-700-6000-50.txt
matlab/bathymetrie/clipper_ver6.4.2/: CMakeLists.txt
matlab/bathymetrie/clipper_ver6.4.2/src/: poly_intersection.cpp
matlab/bathymetrie/input_polygons/: harbor_polygon_w_o_obst_lla.txt
matlab/bathymetrie/output_polygons/: harbor_deeper_than_-8.txt  obstacle_shallower_than_-8_nr_1.txt  obstacle_shallower_than_-8_nr_10.txt  obstacle_shallower_than_-8_nr_11.txt  obstacle_shallower_than_-8_nr_12.txt  obstacle_shallower_than_-8_nr_13.txt  obstacle_shallower_than_-8_nr_2.txt  obstacle_shallower_than_-8_nr_3.txt  obstacle_shallower_than_-8_nr_4.txt  obstacle_shallower_than_-8_nr_5.txt  obstacle_shallower_than_-8_nr_6.txt  obstacle_shallower_than_-8_nr_7.txt  obstacle_shallower_than_-8_nr_8.txt  obstacle_shallower_than_-8_nr_9.txt
matlab/buoies/: boylat.csv  boylat.mat  buoies.dbf  buoies.shp  buoies.shx  buoies.txt  test.m
matlab/polygon_grid_segmentation/: ClosestPtSegmentSegment.m  calc_clipped_area.m  grid.xml  harbor_polygon_short.txt  polygon_grid_segmentation.m
src/: CourseCorrection.cpp  CourseCorrection.h  create_motion_prims.cpp  database.h  geometric_constr.cpp  geometric_constr.h  global.cpp  global.h  main.cpp  main_arc.cpp  main_braunschweig.cpp  main_motion_prims.cpp  main_prim.cpp  main_udp.cpp  mapgrid_lla.cpp  mapgrid_lla.h  optimal_traj_Nships.cpp  optimal_traj_Nships.h  paramID.cpp  shipviewer_base_Nships.cpp  shipviewer_base_Nships.h  shipviewer_base_paramID.cpp  shipviewer_base_paramID.h  udp_braunschweig.cpp  udp_server.cpp
src/DP/: dp_0xA0.cpp  dp_0xA0.h  dp_0xA1.cpp  dp_0xA1.h  dp_0xA2.cpp  dp_0xA2.h  dp_0xA3.cpp  dp_0xA3.h  dp_0xA4.cpp  dp_0xA4.h  dp_0xAC.cpp  dp_0xAC.h  dp_0xAD.cpp  dp_0xAD.h  dp_0xAE.cpp  dp_0xAE.h  dp_0xAF.cpp  dp_0xAF.h  dp_base.cpp  dp_base.h  udp_client_server.cpp
src/Examples/: example1.cpp  example2.cpp
src/Models/: BaseModel.h  Buggy_v1.cpp  Buggy_v1.h  Model1v1.cpp  Model1v1.h  Model1v2.cpp  Model1v2.h  Model1v3.cpp  Model1v3.h  Model1v4.cpp  Model1v4.h  Model1v5.cpp  Model1v5.h  Model1v5MeckPomm.cpp  Model1v5MeckPomm.h  Model2v1.cpp  Model2v1.h  ModelAIS.cpp  ModelAIS.h  Models.txt
src/utils/: functions.cpp  functions.h  polygon.cpp  polygon.h
